feat(bonus): add pagination and loader

--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -34,3 +34,11 @@ ul{
 .badge-type {
     background-color: rgb(254, 169, 99);
 }
+
+button{
+    padding: 8px 16px;
+    background-color: transparent;
+    border-radius: 10px;
+    border:none;
+    cursor: pointer;
+}
